# ozelot

./: .gitignore  Cargo.toml  README.md
examples/: textclient.rs
src/: .client_recv.generated.rs  .client_send.generated.rs  .clientbound-enum.generated.rs  .clientbound-packets.generated.rs  .serverbound-enum.generated.rs  .serverbound-packets.generated.rs  client.rs  client_recv.rs  client_send.rs  clientbound.rs  connection.rs  errors.rs  json.rs  lib.rs  macros.rs  mojang.rs  packet_definitions.clj  packets.clj  read.rs  server.rs  serverbound.rs  utils.rs  write.rs  yggdrasil.rs
src/tests/: datatypes.rs  mod.rs
