[package]
name = "ozelot"
version = "0.1.0"
authors = ["C4K3 <crates.io@c4k3.net>"]
description = "Handles everything network related to MCMODERN."
documentation = "https://c4k3.net/rustdocs/ozelot/ozelot/"
repository = "https://github.com/C4K3/ozelot/"
keywords = ["minecraft", "mc", "mcmodern"]
categories = ["games"]
license = "CC0-1.0"

[dependencies]
byteorder = "1"
derive-new = "0.4"
flate2 = "0.2"
netbuf = "0.4"
openssl = "0.9"
reqwest = "0.4"
rustc-serialize = "0.3"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
error-chain = "0.10"

