[package]
name = "ozelot"
version = "0.9.0"
authors = ["C4K3 <crates.io@c4k3.net>"]
description = "Handles everything network related to MCMODERN."
documentation = "https://c4k3.net/rustdocs/ozelot/ozelot/"
repository = "https://github.com/C4K3/ozelot/"
keywords = ["minecraft", "mc", "mcmodern"]
categories = ["games"]
license = "CC0-1.0"

[dependencies]
byteorder = { version = "1", features = ["i128"] }
flate2 = "1"
netbuf = "0.4"
openssl = "0.10"
curl = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
error-chain = "0.12"

[dev_dependencies]
rpassword = "2"
getopts = "0.2"

